test/function/missing_comma_in_parameters.lox
// error: expect ')' after parameters
fn foo(a, b c, d, e, f) {}